# se-lib

./: .gitignore  01_decision_analysis_example.ipynb  LICENSE  README.md  debug_decision_verify.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: README.md  se-lib discrete event modeling users guide and examples.md  se-lib system dynamics users guide.md  se_lib_system_dynamics_modeling_users_guide_and_examples.html
docs/excel_files/: README.md  SE4101 Project Fault Tree Aftel 29May2022 v.3.xlsx  aav_fault_tree.xlsx
lib/: __init__.py
lib/cost_models/: README.md  __init__.py
lib/diagrams/: __init__.py
lib/simulation/: __init__.py  sim.py  simulation.py
notebooks/: BCSSE_ARR_2026_Keynote_Developing_and_Integrating_Custom_AI_Assistants_for_Systems_Engineering.ipynb  BCSSE_ATW_2026_Keynote_Developing_and_Integrating_Custom_AI_Assistants_for_Systems_Engineering.ipynb  readme.md  se_lib_discrete_event_modeling_users_guide_and_examples.ipynb  se_lib_system_dynamics_modeling_users_guide_and_examples.ipynb
notebooks/tutorials/cser26/: CSER_2026_Tutorial_Developing_AI_Agents_and_Custom_LLMs_for_Systems_Engineering.ipynb  readme.md
notebooks/tutorials/cser26/figures/: readme.md
se-lib/diagrams/: diagrams.py
selib/: __init__.py
selib/cost_models/: README.md  cosysmo.py
selib/decision/: __init__.py  methods.py  model.py  plotting.py
selib/diagrams/: __init__.py  diagrams.py
selib/simulation/: __init__.py  simulation.py
