[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "se-lib"
version = "0.33.0"
authors = [
  { name="se-lib Development Team", email="info@se-lib.org" },
]
[tool.hatch.build.targets.wheel]
packages = ["selib"]
description = "Systems Engineering Library (se-lib)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "pandas",
    "graphviz",
    "pysd",
    "simpy",
    "ipython",
]
[tool.poetry.dependencies]
matplotlib = "^3.7.1"
pandas = "^2.0.0"
graphviz = "^0.20.1"
pysd = "^3.9.1"
netCDF4 = "^1.6.3"
simpy = "^4.1.1"
[project.urls]
"Homepage" = "http://se-lib.org"
