[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "se-lib"
version = "0.34.0"
authors = [
  { name="se-lib Development Team", email="info@se-lib.org" },
]
description = "Systems Engineering Library (se-lib)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "pandas",
    "graphviz",
    "pysd",
    "simpy",
    "ipython",
]
[tool.hatch.build.targets.wheel]
packages = ["selib"]
[project.urls]
"Homepage" = "http://se-lib.org"
